Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  After Zope 2.8.9

    Bugs fixed

      - LP #142667:  Updated to ZODB-3.4.5 to fix problem with product
        auto-refresh.

      - Collector #2318: Allow override of zopectl's control socket in
        zope.conf

      - integrated Hotfix-2008-08-12

  Zope 2.8.9 (2006/03/25)

    Bugs fixed

      - Collector #2294: Protected DOS-able ControlPanel methods with the
        same 'requestmethod' wrapper.

      - Collector #2294: Protected various security mutators with a new
        postonly decorator.  The decorator limits method publishing to
        POST requests only, and is a backport from Zope 2.11's requestmethod
        decorator factory.

      - Collector #2263: 'field2ulines' did not convert empty string
        correctly.

      - Collector #2237: 'make' doesn't tell you to run 'make inplace'
        before running 'make instance'.

      - Collector #2235: A number of ZCatalog methods were doing boolean
        evaluation of objects that implemented __len__ instead of checking
        them against None. Replaced a number of "if not obj" with
        "if obj is None".

      - Fix yet another resTructuredText glitch, and add tests (test
        backported from 2.9, which was not in fact vulnerable).

      - Collector #2157: Expose name of broken class in SystemError raised
        from '__getstate__' of a broken instance.

  Zope 2.8.8 (2006/07/14)

    Bugs fixed

      - OFS Application: Removed deprecation warnings added in Zope 2.8.5.
        The warning period starts in Zope 2.9.0.

      - Collector #2136: Map ResourceLockedError to the correct response code.

      - Collector #2016: DemoStorage couldn't wrap base storages without
        an '_oid' attribute (fixed in ZODB 3.4.4).

      - Collector #2116: sequence.sort() did not work properly for